--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,6 @@
-mkl-fft==1.3.1
-appnope==0.1.3
-asgiref==3.5.2
-asynctest==0.13.0
-attrs==22.1.0
-bleach==5.0.1
-blinker==1.4
-cachetools==5.2.0
-certifi==2022.6.15
-commonmark==0.9.1
-contextlib2==21.6.0
-cycler==0.11.0
-Cython==0.29.32
-debugpy==1.6.2
+python==3.7
 Django==3.2.15
-docutils==0.19
-et-xmlfile==1.1.0
-fastjsonschema==2.16.1
-fonttools==4.34.4
-google-auth==2.10.0
-google-pasta==0.2.0
-h5py==2.10.0
-importlib-metadata==4.12.0
-importlib-resources==5.9.0
-ipykernel==6.15.1
-ipython==7.34.0
-ipywidgets==7.7.1
-Jinja2==3.1.2
-jsonschema==4.9.1
-jupyter==1.0.0
-jupyter-client==7.3.4
-jupyter-console==6.4.4
-jupyter-core==4.11.1
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.1
-keyring==23.7.0
-kiwisolver==1.4.4
-lxml==4.9.1
 matplotlib==3.5.2
-matplotlib-inline==0.1.3
-mistune==0.8.4
-mkl-service==2.4.0
-nbclient==0.6.6
-nbconvert==6.5.0
-nbformat==5.4.0
 opencv-python==4.6.0.66
 openpyxl==3.0.10
 pandas==1.3.5
